--- a/index.html
+++ b/index.html
@@ -5,32 +5,213 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link href='css/shopping-cart.css' rel='stylesheet'>
   
   <title>Frontend Mentor | Product preview card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    @font-face {
+      font-family: 'Montserrat';
+      src: url('fonts/Montserrat-VariableFont_wght.ttf') format('truetype');
+      font-weight:500;
+      font-style: normal;
+    }
+
+    @font-face {
+      font-family: 'Montserrat';
+      src: url('fonts/Montserrat-VariableFont_wght.ttf') format('truetype');
+      font-weight:700;
+      font-style: normal;
+    }
+
+    @font-face {
+      font-family: 'Fraunces';
+      src: url('fonts/Fraunces-VariableFont_SOFT,WONK,opsz,wght.ttf') format('truetype');
+      font-weight:700;
+      font-style: normal;
+    }
+
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      background-color: hsl(30, 38%, 92%);
+    }
+
+    .flex-container {
+      display: flex;
+      flex-direction: row;
+      width: 545px;
+      height: 407px;
+      overflow: hidden;
+      border-radius: 12px;
+      background-color: hsl(0, 0%, 100%);
+    }
+
+    .flex-item-left {
+      flex: 50%;
+      width: 272px;
+      margin: 0;
+    }
+
+    .product-image {
+      background-image: url("images/image-product-desktop.jpg");
+      background-size: cover;
+      width: 272px;
+      height: 408px;
+      border-width: 0px;
+    }
+
+    .flex-item-right {
+      flex: 50%;
+      width: 272px;
+      padding-left: 30px;
+      padding-top: 30px;
+    }
+
+    .product-type, .product-description, .product-markdown {
+      font-family: "Montserrat";
+      font-weight: 500;
+      font-size: 14px;
+      color: hsl(228, 12%, 48%);
+    }
+
+    .add-cart-button {
+      font-family: "Montserrat";
+      font-weight: 700;
+      font-size: 14px;
+      color: hsl(0, 0%, 100%);
+      background-color: hsl(158, 36%, 37%);
+      width: 213px;
+      height: 43px;
+      border-width: 0;
+      border-radius: 7px;
+      position: relative;
+      margin-bottom: 24px;
+      cursor: pointer;
+    }
+
+    .add-cart-button:active {
+      background-color: rgb(26, 64, 49);
+    }
+
+    .product-name, .product-price {
+      font-family: "Fraunces";
+      font-weight: 700;
+      font-size: 27px;
+    }
+
+    .product-price {
+      font-size: 29px;
+      color: hsl(158, 36%, 37%);
+    }
+
+    .product-type {
+      margin-bottom: 15px;
+      font-size: 10px;
+      letter-spacing: 0.5em;
+    }
+
+    .product-name {
+      margin-bottom: 20px;
+      width: 83%;
+      color: hsl(212, 21%, 14%)
+    }
+
+    .product-description {
+      margin-bottom: 24px;
+      line-height: 1.5;
+    }
+
+    .product-pricing {
+      margin-bottom: 20px;
+      position: relative;
+    }
+
+    .product-markdown {
+      margin: 0;
+      position: absolute;
+      top: 27%;
+      left: 134px;
+      text-decoration: line-through;
+    }
+
+    .product-price, .product-markdown, .add-cart-text {
+      display: inline-block;
+    }
+
+    i.gg-shopping-cart {
+      margin: 0;
+      position: absolute;
+      top: 24%;
+      left: 26%;
+    }
+
+    .add-cart-text {
+      margin: 0;
+      position: absolute;
+      top:27%;
+      left: 38%;
+    }
+
+    @media (max-width: 545px) {
+      .flex-container {
+        flex-direction: column;
+        width: 342px;
+        height: auto;
+      }
+
+      .flex-item-left {
+        flex: content;
+      }
+
+      .flex-item-right {
+        height: 370px;
+        width: 292px;
+      }
+
+      .product-image {
+        background-image: url("images/image-product-mobile.jpg");
+        width: 342px;
+        height: 240px;
+      }
+
+      .add-cart-button {
+        width: 292px;
+      }
+
+      i.gg-shopping-cart {
+        left: 29%;
+      }
+    }
+
   </style>
 </head>
 <body>
+  <article class="flex-container">
+    <figure class="flex-item-left"><div class="product-image"></div></figure>
+    
+    <div class="flex-item-right product-text">
+      <div class="product-type">PERFUME</div>
 
-  Preview
+      <div class="product-name">Gabrielle Essence Eau De Parfum</div>
 
-  Gabrielle Essence Eau De Parfum
+      <div class="product-description">
+      A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+      Perfumer-Creator for the House of CHANEL.
+      </div>
 
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
+      <div class="product-pricing">
+        <div class="product-price">$149.99</div>
+        <div class="product-markdown">$169.99</div>
+      </div>
 
-  $149.99
-  $169.99
+      <button class="add-cart-button"><i class="gg-shopping-cart"></i>
+        <div class="add-cart-text">Add to Cart</div>
+      </button>
+    </div>
+  </article>
 
-  Add to Cart
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
 </body>
 </html>
